[metadata]
name = sphinxcontrib.kana_text
license_file = LICENSE
maintainer = KaKkou
keywords = sphinx, sphinxcontrib, japanese, ja, kana_text, glossary, index, kana
description = KanaText class extends the functionality of Text class, for someone who use index/glossary directives.
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
platforms = any
classifiers = 
	Development Status :: 4 - Beta
	Framework :: Sphinx :: Extension
	Intended Audience :: Developers
	Intended Audience :: Education
	License :: OSI Approved :: BSD License
	Natural Language :: Japanese
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Topic :: Documentation :: Sphinx
	Topic :: Utilities

[options]
include_package_data = True
packages = sphinxcontrib.kana_text
package_dir =
	sphinxcontrib.kana_text = src
test_suite = tests.suites
install_requires = Sphinx

[options.packages.find]

[options.entry_points]
console_scripts =
	sphinx-kana-geindex = sphinxcontrib.kana_text.command:genindex
