[metadata]
name = sphinxcontrib.kana_text
version = attr: src.__version__
license = BSD 2-Clause License
author = @koKekkoh
url = https://qiita.com/tags/sphinxcotrib.kana_text
license_file = LICENSE
maintainer = KaKkouo
keywords = sphinx, sphinxcontrib, japanese, ja, kana_text, glossary, index, kana
description = KanaText class extends the functionality of Text class, for someone who use index/glossary directives.
long_description = file: README.rst, DEVELOP.rst
long_description_content_type = text/x-rst
platforms = any
classifiers = 
	Development Status :: 4 - Beta
	Framework :: Sphinx :: Extension
	Intended Audience :: Developers
	Intended Audience :: Education
	License :: OSI Approved :: BSD License
	Natural Language :: Japanese
	Operating System :: OS Independent
	Programming Language :: Python :: 3
        Programming Language :: Python :: 3 :: Only
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
	Topic :: Documentation :: Sphinx
	Topic :: Utilities

[options]
include_package_data = True
packages = sphinxcontrib.kana_text
package_dir =
	sphinxcontrib.kana_text = src
test_suite = tests.suites
install_requires =
	Sphinx
	sphindexer

[aliases]
test=pytest

[options.packages.find]

[options.entry_points]
console_scripts =
	sphinx-kana-geindex = sphinxcontrib.kana_text.command:genindex
